Fix import dependencies for Streamlit Cloud deployment
- Added pandas and numpy back with stable versions (pandas 2.0.3, numpy 1.24.3)
- Made selenium imports conditional to handle missing dependencies gracefully
- Added fallback error messages for LinkedIn scraper when selenium is not available
- LinkedIn scraper will show appropriate message in cloud environment
- Removed selenium from requirements (not supported in Streamlit Cloud)

--- a/Smart-AI-Resume-Analyzer/requirements.txt
+++ b/Smart-AI-Resume-Analyzer/requirements.txt
@@ -14,12 +14,12 @@ pypdf
 python-docx
 pdfminer.six
 
-# Basic Data Processing (minimal versions to avoid compilation)
-numpy
-plotly
+# Data Processing (using stable versions with pre-built wheels)
+pandas==2.0.3
+numpy==1.24.3
 
-# Text Processing
-nltk
+# Visualization
+plotly
 
 # Text Processing
 nltk
@@ -32,3 +32,6 @@ requests
 
 # Essential packages
 typing-extensions
+
+# Note: selenium removed - not supported in Streamlit Cloud environment
+# LinkedIn scraper will show appropriate error message when selenium is not available
