Fix Google AI import and add fallback handling
- Added google-generativeai back to requirements.txt
- Made google.generativeai import conditional in ai_resume_analyzer.py
- Added proper error handling when Google AI is not available
- App will gracefully fall back to OpenRouter when Google AI is unavailable
- Resolves ModuleNotFoundError for google.generativeai

--- a/Smart-AI-Resume-Analyzer/requirements.txt
+++ b/Smart-AI-Resume-Analyzer/requirements.txt
@@ -6,6 +6,7 @@ streamlit-extras
 
 # AI and Machine Learning
 openai
+google-generativeai
 python-dotenv
 
 # PDF and Document Processing (Cloud compatible - no compilation needed)
