Fix PyPDF2 import errors - migrate to pypdf
- Replace PyPDF2 imports with pypdf in utils/resume_analyzer.py
- Replace PyPDF2 imports with pypdf in utils/ai_resume_analyzer.py
- Update error messages to reflect pypdf instead of PyPDF2
- pypdf is already included in requirements.txt for cloud compatibility
- Fixes 'No module named PyPDF2' error in Streamlit Cloud deployment
- PDF text extraction now works with cloud-compatible pypdf package

--- a/resume-radar/requirements.txt
+++ b/resume-radar/requirements.txt
@@ -1,6 +1,15 @@
-pypdf2
+pypdf
 pymupdf
 python-dotenv
 openai
 reportlab
 pytest   # for running tests
+pip>=25.2
+setuptools>=75.1.0
+wheel>=0.44.0
+
+numpy==1.26.4
+pandas==2.2.2
+PyMuPDF==1.24.9
+streamlit==1.38.0
+rich==14.1.0
