--- a/Smart-AI-Resume-Analyzer/requirements.txt
+++ b/Smart-AI-Resume-Analyzer/requirements.txt
@@ -15,6 +15,10 @@ pypdf
 python-docx
 pdfminer.six
 
+# PyMuPDF for local development (original annotation system)
+# May not work in Streamlit Cloud due to compilation requirements
+PyMuPDF
+
 # Data Processing (using stable versions with pre-built wheels)
 pandas==2.0.3
 numpy==1.24.3
